# azure-functions-rs

./: .gitmodules
azure-functions/: Cargo.toml
azure-functions-codegen/src/: lib.rs
azure-functions-durable/: Cargo.toml
azure-functions-durable/src/: client.rs
azure-functions-shared/: Cargo.toml
azure-functions-shared-codegen/src/: lib.rs
azure-functions-shared/cache/: azure_functions_rpc_messages.rs
azure-functions/src/: worker.rs
