[package]
name = "azure-functions-durable"
license = "MIT"
version = "0.11.0"
authors = ["Peter Huene <peterhuene@protonmail.com>"]
description = "Durable Functions for Rust"
repository = "https://github.com/peterhuene/azure-functions-rs/"
homepage = "https://functions.rs"
edition = "2018"

[dependencies]
bytes = {version="0.5.6"}
futures-preview = {version="0.3.0-alpha.19"}
futures-util = "0.3.5"
hyper = {version="0.13.3", features=["stream"]}
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
tokio = "0.2.0-alpha.6"
chrono = { version = "0.4.9", features = ["serde"] }
url = "1.7.2"
log = "0.4.7"

[dev-dependencies]
mockito = "0.19.0"
